sylvander-tui/tests/snapshots/snapshots__unknown_tool_degrades_to_a_visible_redacted_step.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(&state, 100, 24)"
---
  ✓ future_extension_tool     00s                                                                   
  │ ✓ future extension tool                                                                         
  │   api_token  [REDACTED]                                                                         
  │   operation  future-mode                                                                        
  │                                                                                                 
  │   result                                                                                        
  │     structured fallback result                                                                  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
────────────────────────────────────────────────────────────────────────────────────────────────────
>                                                                                                   
────────────────────────────────────────────────────────────────────────────────────────────────────
◌ working · model — · branch — · session — · 0 tok                            esc interrupt   /draft
