sylvander-tui/tests/snapshots/snapshots__welcome_first_turn_and_clean_agent_reply_share_one_transcript.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(&state, 120, 36)"
---
                       ⢀⣠⢠⡖                                                                                             
                    ⢀⣠⣶⣿⡇⣿⣷⣤⣀                     Sylvander                                                             
                  ⢀⣠⣤⠄⣿⣿⡇⣿⣿⡇⣤⣤⡀                   agent workspace                                                       
               ⢀⣴⣶⣿⠿⣋⣾⡿⠛⠁⠙⢿⣷⣜⢿⣿⣾⣦⠄                                                                                      
        ⣠⣤    ⣠⣿⣿⠟⣡⡾⠛⠉     ⠉⠻⢿⣬⡻⣿⡌⣧⡀              model     —                                                           
    ⢠⣴⣄⠸⠛⠉   ⢰⣿⣿⡃⣿⡟  ⣀⡀   ⢀⡀  ⢹⣷⠄⣾⣿⣿              workspace ~/workspace                                                 
     ⠈⠁⠠⡀⣀   ⢰⣦⡙⠇⣿⠁ ⢸⣿⣿   ⣿⣿⡆  ⣿⡦⢏⣵⣶⡆             branch    —                                                           
     ⣠⣔⣚⠿⠏⣠⣄ ⢈⣙⢿⣦⡩⣷⣀ ⠉⠁   ⠈⠉ ⣀⣴⠌⣴⡿⢋⣤⠁⢀⠲⠿⢤⡀        session   new                                                         
   ⢀⣼⣿⣿⠟⠼⣷ ⠏⠘⢂⡡⢤⣌⠳⠮⣝⡻⢷⣤⣄ ⣠⣴⣾⠿⣛⣥⠞⣫⡤⢌⡑⠛⠉⣶⠸⣿⣿⣷                                                                             
   ⠘⢿⡟⡄ ⠸⠃  ⢠⡛⠿⡆⠉ ⡐⠬⠙⠳⠌⣟ ⣿⡿⠽⠋⢥⡶⢂⠙⠱⠿⢟⡃ ⠙⡇⠈⢹⣿⡇      What should we work through?                                          
     ⠙       ⠻⠁   ⠉            ⠋  ⠈⡿⠃     ⠟                                                                             
                                                                                                                        
  › what tools do you have?                                                                                             
                                                                                                                        
  ◆  I have tools:                                                                                                      
                                                                                                                        
     1. ask_user — Ask for missing information.                                                                         
     2. Read — Read a workspace file.                                                                                   
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
>                                                                                                                       
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
◌ connecting · model — · branch — · session — · 0 tok                                          connecting…   draft local
