sylvander-tui/tests/snapshots/snapshots__workspace_rollback_requires_a_file_scoped_confirmation.snap
---
source: sylvander-tui/tests/snapshots.rs
assertion_line: 568
expression: "render_buf(state, 100, 28)"
---
                     ⢀⣠⢠⡖                                                                           
                  ⢀⣠⣶⣿⡇⣿⣷⣤⣀                     Sylvander                                           
                ⢀⣠⣤⠄⣿⣿⡇⣿⣿⡇⣤⣤⡀                   agent workspace                                     
             ⢀⣴⣶⣿⠿⣋⣾⡿⠛⠁⠙⢿⣷⣜⢿⣿⣾⣦⠄                                                                    
      ⣠⣤    ⣠⣿⣿⠟⣡⡾⠛⠉     ⠉⠻⢿⣬⡻⣿⡌⣧⡀              model     —                                         
  ⢠⣴⣄⠸⠛⠉   ⢰⣿⣿⡃⣿⡟  ⣀⡀   ⢀⡀  ⢹⣷⠄⣾⣿⣿              workspace ~/workspace                               
   ⠈⠁⠠⡀⣀   ⢰⣦⡙⠇⣿⠁ ⢸⣿⣿   ⣿⣿⡆  ⣿⡦⢏⣵⣶⡆             branch    —                                         
   ⣠⣔⣚⠿⠏⣠⣄ ⢈⣙⢿⣦⡩⣷⣀ ⠉⠁   ⠈⠉ ⣀⣴⠌⣴⡿⢋⣤⠁⢀⠲⠿⢤⡀        session   new                                       
 ⢀⣼⣿⣿⠟⠼⣷ ⠏⠘⢂⡡⢤⣌⠳⠮⣝⡻⢷⣤⣄ ⣠⣴⣾⠿⣛⣥⠞⣫⡤⢌⡑⠛⠉⣶⠸⣿⣿⣷                                                           
 ⠘⢿⡟⡄ ⠸⠃  ⢠⡛⠿⡆⠉ ⡐⠬⠙⠳⠌⣟ ⣿⡿⠽⠋⢥⡶⢂⠙⠱⠿⢟⡃ ⠙⡇⠈⢹⣿⡇      What should we work through?                        
   ⠙       ⠻⠁   ⠉            ⠋  ⠈⡿⠃     ⠟                                                           
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
────────────────────────────────────────────────────────────────────────────────────────────────────
❯                                                                                                   
────────────────────────────────────────────────────────────────────────────────────────────────────
  ◆ Restore Agent file changes?                                                                     
  Conversation history stays unchanged. External file changes can conflict.                         
                                                                                                    
    ↶ src/lib.rs                                                                                    
    ↶ docs/design.md                                                                                
                                                                                                    
  › 1. Keep current files                                                                           
    2. Restore the files listed above                                                               
────────────────────────────────────────────────────────────────────────────────────────────────────
! disconnected · model — · branch —                               ! reconnecting…   /draft preserved
